@@ -1,5 +1,9 @@
 2010-01-22 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Headers/CoreFoundation/CFString.h: Add availability macros.
+
+2010-01-22 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/CFBase.m:
 	* Source/CFArray.m:
 	* Source/CFData.m:
